# rust-rest-api

./: Cargo.toml
src/: controllers.rs  main.rs
