[package]
name = "rustapi-actixweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
bson = "2.2.0"
chrono = "0.4.11"
futures = "0.3.5"
mongodb = "2.2.1"
rustc-serialize = "0.3.24"
serde = { version = "1.0", features = ["derive"] }